2008-12-02  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (XLIB:DRAW-ARC): use modprep signature
	emulation instead of emulating it by hand

2008-12-01  Sam Steingold  <sds@gnu.org>

	Better keysym->char conversion for the sake of McCLIM
	* modules/clx/new-clx/clx.f (keysym2char): new function; use
	int_char for 8-bit ascii and special-case 6 control keysyms;
	return NIL otherwise (see a long comment in the code)
	(KEYSYM->CHARACTER, KEYCODE->CHARACTER): use it instead if int_char
	Reported by Philippe Brochard <hocwp@free.fr>

2008-12-01  Sam Steingold  <sds@gnu.org>

	* constobj.d [UNIX_CHARNAMES]: add the standard ASCII names "Lf"
	for "Linefeed" (10) and "Ff" for "Page" (12)
	* charstrg.d (charname_table_length, charname_table_codes)
	[UNIX_CHARNAMES]: updated for the above

2008-11-29  Vladimir Tzankov  <vtzankov@gmail.com>

	* eval.d (interpret_bytecode_): fix a GC-safety bug (cod_bind)

2008-11-29  Vladimir Tzankov  <vtzankov@gmail.com>

	fix possible multithreading deadlocks
	* spvw.d (thread_symvalues_lock): new mutex guarding the per thread
	symvalues arrays in threads
	(init_multithread): initialize it
	* spvw_global.d (add_per_thread_special_var): use it. threads lock
	used before may lead to deadlock in certain cases
	* zthread.d (thread_stub): call init_reader_low() in the context of
	the new thread
	(MAKE-THREAD): remove init_reader_low() call (may cause deadlock if
	it triggers GC - new thread is registered but not started - so it
	cannot respond to the suspend request).

2008-11-29  Vladimir Tzankov  <vtzankov@gmail.com>

	* stream.d (WRITE-INTEGER): fix a GC-safety bug

2008-11-28  Vladimir Tzankov  <vtzankov@gmail.com>

	define O(dynamic_8bit_vector), O(dynamic_c_string) as thread-local
	constant objects
	* constobj_tl.d (dynamic_8bit_vector, dynamic_c_string): define as
	per thread objects
	* constobj.d (dynamic_8bit_vector, dynamic_c_string): remove from here
	* lispbibi.d (DYNAMICIC_8BIT_VECTOR, FREE_DYNAMIC_8BIT_VECTOR): use